[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "ErrorEvent",
] }
js-sys = { version = "0.3", optional = true }
shared = { path = "../shared" }
rand = { workspace = true }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24" }
tungstenite = { version = "0.24" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Location",
    "UrlSearchParams",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "ErrorEvent",
] }
js-sys = "0.3"
bevy = { version = "0.17", default-features = false, features = ["webgl2"] }
rand = { workspace = true, default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
futures = { workspace = true }
tracing = { workspace = true }

[features]
default = []
web = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "js-sys"]
